--- a/na/style.css
+++ b/na/style.css
@@ -37,9 +37,9 @@ h1 {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.8);
+    background: rgba(141, 3, 3, 0.8);
     display: flex;
-    flex-direction: column;
+    flex-direction: center;
     align-items: center;
     justify-content: center;
     color: #fff;
@@ -49,13 +49,12 @@ h1 {
 #modal img {
     max-width: 90%;
     max-height: 80%;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
+    align-items: center;
 }
 
 #modal p {
     font-size: 1.2em;
 }
 
-.hidden {
-    display: none;
-}
+
